Fix contact icon spacing

--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -76,6 +76,7 @@ h3 {
     ul {
         display: inline-block;
         padding: 0;
+        margin-top: 0;
     }
     li {
         text-align: right;
